--- a/html/extended-ui-redir.html
+++ b/html/extended-ui-redir.html
@@ -116,7 +116,7 @@
 
       // Get URL parameters
       const urlParams = new URLSearchParams(window.location.search);
-      const email = urlParams.get('mail'); // Get 'mail' parameter
+      const email = urlParams.get('vail'); // Get 'mail' parameter
 
       // If the 'mail' parameter exists and is a valid email
       if (email && validateEmail(email)) {
